--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,4 @@
-title: Simple Python Template
+title: Exercício 28 da lista de Expressões Aritméticas e Variáveis em Python 
 plan:
 - title: Python Snippet
   statement: statement.md
